# tkinterform

./: pyproject.toml  setup.py  students.csv
